feat: add Qdrant infra and RAG configuration
Add Qdrant vector DB to docker-compose, RAG/embedding settings to
config.py and .env.example. Add google-genai, qdrant-client, and
rich dependencies.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,16 @@ ANTHROPIC_API_KEY=
 AI_MODEL=claude-opus-4-6
 DATABASE_URL=postgresql+asyncpg://user:pass@localhost:5432/build_ai_agents
 DEBUG=false
+
+# RAG / Qdrant
+QDRANT_URL=http://localhost:6333
+QDRANT_COLLECTION=clinical_guidelines
+QDRANT_API_KEY=
+
+# Google AI Embeddings
+# Set GOOGLE_API_KEY for API key auth, otherwise uses Vertex AI ADC.
+GOOGLE_API_KEY=
+GCP_PROJECT_ID=raman-gcp-project-k8s-dev
+GCP_LOCATION=us-central1
+EMBEDDING_MODEL=text-embedding-005
+EMBEDDING_DIMENSIONS=768
