--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,16 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  qdrant:
+    image: qdrant/qdrant:v1.12.1
+    container_name: build_ai_agents_qdrant
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant_data:/qdrant/storage
+    restart: unless-stopped
+
 volumes:
   pgdata:
+  qdrant_data:
