--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "asyncpg>=0.30.0",
     "claude-agent-sdk>=0.1.29",
     "fastapi>=0.128.0",
+    "google-genai>=1.65.0",
     "greenlet>=3.3.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "qdrant-client>=1.13.0",
+    "rich>=14.3.3",
     "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
 ]
