--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,7 @@ name = "build-ai-agents-backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "asyncpg>=0.30.0",
     "claude-agent-sdk>=0.1.29",
@@ -22,6 +22,7 @@ dependencies = [
 dev = [
     "aiosqlite>=0.22.1",
     "httpx>=0.28.1",
+    "py-spy>=0.4.1",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "pytest-mock>=3.15.1",
